[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roam-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Roam Research integration with Claude"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "youtube-transcript-api>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[project.scripts]
roam-mcp = "roam_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["roam_mcp"]